[build-system]
requires = ["setuptools>=64", "setuptools-scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zigpy-blz"
dynamic = ["version"]
description = "A Python library for integrating Bouffalo Lab Zigbee (BLZ) radios with zigpy"
urls = { repository = "https://github.com/bouffalolab/zigpy-blz" }
authors = [{ name = "Frank Li", email = "fangzhel@bouffalolab.com" }]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
dependencies = [
    "zigpy>=0.60.2",
    "async_timeout",
]
keywords = ["zigbee", "zigpy", "blz", "bouffalo", "home-automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.setuptools_scm]
write_to = "zigpy_blz/_version.py"
fallback_version = "0+unknown"

[project.optional-dependencies]
testing = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.1.0",
]

[tool.black]
safe = true
quiet = true

[tool.isort]
multi_line_output = 3
length_sort = true
balanced_wrapping = true
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
indent = "    "
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = ["zigpy_blz", "tests"]
forced_separate = "tests"
combine_as_imports = true

[tool.flake8]
exclude = ".venv,.git,.tox,docs,venv,bin,lib,deps,build"
max-line-length = 88
ignore = "W503,E203,D202"

[tool.mypy]
check_untyped_defs = true
show_error_codes = true
show_error_context = true
disable_error_code = [
    "attr-defined",
    "assignment",
    "arg-type",
    "union-attr",
    "var-annotated",
    "name-defined",
]

[tool.coverage.run]
source = ["zigpy_blz"]

[tool.pyupgrade]
py37plus = true
